--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!----Side bar--->
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
-                  <div class="author-img" style="background-image: url(images/IMG_agus.jpg);"></div>
+                  <div class="author-img" style="background-image: url(images/agus.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://eliasagustin.github.io">Elias Agustin</a></h1>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
