--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
                      <ul>
-                        <li><a href="#" data-nav-section="about">Descripción</a></li>
+                        <li><a href="#" data-nav-section="about1">Descripción</a></li>
                         <li><a href="#" data-nav-section="pract1">Practica 1</a></li>
                         <li><a href="#" data-nav-section="pract2">Practica 2</a></li>
                         <li><a href="#" data-nav-section="pract3">Practica 3</a></li>
@@ -81,6 +81,12 @@
                   </div>
                </section>
 -->
+
+               <section class="practica-1" data-section="pract1">
+                  <script type="text/javascript">
+                     document.location = "eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf"
+                 </script>
+               </section>
                <!---------------About me---------------------->
                <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
@@ -130,6 +136,7 @@
                                  </a>
                               </div>
                            </div>
+                           
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
