--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                <section class="practica-1" data-section="pract1">
                   <script type="text/javascript">
-                     document.location = "eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf"
+                     document.location = "https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf"
                  </script>
                </section>
                <!---------------About me---------------------->
