--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
 -->
 
                <section class="practica-1" data-section="pract1">
-                  <script type="text/javascript">
-                     document.location = "https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf"
-                 </script>
+                  <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" ><img src="images/pract1.png" alt="Practica 1"></a>
                </section>
                <!---------------About me---------------------->
                <section class="colorlib-about" data-section="about">
