--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                               </div>
                            </div>
                            <div class="row">
+                              <a href="https://github.com/fabfabit/MyStuff_public/blob/master/files/ProjMarr_slides.pdf" class="image fit" ><img src="images/pract1.png" alt="Practica 1"></a>
+                           </div>
+                           <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
                                     <h2>You will be happy to know that I have completed over 20+ projects successfully!</h2>
