test 2 pdf imgs

--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
                                  </a>
                               </div>
                            </div>
-                           <div class="row">
-                              <a href="https://github.com/fabfabit/MyStuff_public/blob/master/files/ProjMarr_slides.pdf" class="image fit" ><img src="images/pract1.png" alt="Practica 1"></a>
+                           <div class="row" align="middle" id="practica1">
+                              <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" >
+                                 <img src="images/pract1.png" width="75%" alt="Practica 1">
+                              </a>
                            </div>
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
@@ -145,7 +147,15 @@
                      </div>
                   </div>
                </section>
-                
+               <section class="colorlib-skills" data-section="pract1">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="practica1">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" >
+                           <img src="images/pract1.png" width="75%" alt="Practica 1">
+                        </a>
+                     </div>
+                  </div>
+               </section>
                 <!-------Github pie chart--------->
 <!--
                 <section class="colorlib-skills" data-section="skills">
