--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <script data-ad-client="ca-pub-2147632065762164" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <body>
-       <canvas id="canvas"></canvas>
+      <!--       <canvas id="canvas"></canvas> -->
       <div id="colorlib-page">
          <div class="container-wrap">
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
@@ -88,6 +88,7 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
+                                 <img src="images/toplogo.png" width="100%" alt="UTN Logo">
                                  <div class="about-desc">
                                     <h1><strong>Elias <span style="color: #4c5dbe">Agustin</span></strong></h1>
                                     <hr>
