--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                            <div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                                  <div class="hire">
-                                    <h2>You will be happy to know that I have completed over 20+ projects successfully!</h2>
+                                    <h3>Practica 1 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                                  </div>
                               </div>
@@ -154,6 +154,32 @@
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" >
                            <img src="images/pract1.png" width="75%" alt="Practica 1">
                         </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Practica 1 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="pract1C">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="practica1">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" >
+                           <img src="images/pract1.png" width="75%" alt="Practica 1 Complementaria">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Practica 1 COMPLEMENTARIA <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
                      </div>
                   </div>
                </section>
