--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-12">
+                           <img src="images/toplogo.png" width="100%" alt="UTN Logo" ata-animate-effect="fadeInLeft">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
-                                 <img src="images/toplogo.png" width="100%" alt="UTN Logo">
+                                 
                                  <div class="about-desc">
                                     <h1><strong>Elias <span style="color: #4c5dbe">Agustin</span></strong></h1>
                                     <hr>
