modificaciones links colores y especificaciones

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                      <ul>
                         <li><a href="#" data-nav-section="about1">Descripción</a></li>
                         <li><a href="#" data-nav-section="pract1">Practica 1</a></li>
+                        <li><a href="#" data-nav-section="pract1C">Practica 1</a></li>
                         <li><a href="#" data-nav-section="pract2">Practica 2</a></li>
                         <li><a href="#" data-nav-section="pract3">Practica 3</a></li>
                      </ul>
@@ -87,15 +88,15 @@
                      <div class="row">
                         <div class="col-md-12">
                            <img src="images/toplogo.png" width="100%" alt="UTN Logo" ata-animate-effect="fadeInLeft">
-                        < br>
+                           <br>
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
                                  
                                  <div class="about-desc">
                                     <h1><strong>Elias <span style="color: #4c5dbe">Agustin</span></strong></h1>
                                     <hr>
-                                    <p style="text-align: center"><strong>Bienvenidos.< br>
-                                    EL sitio web que se encuentra visitando fue pensado como una práctica para 
+                                    <p style="text-align: center"><strong>Bienvenidos!!<br>
+                                    EL sitio web que se encuentra visitando fue pensado como una práctica, con la finalidad de 
                                     crear una interface mas amigable en la entrega de los trabajos prácticos.</p></strong>
                                  </div>
                               </div>
@@ -117,7 +118,7 @@
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Practica 1 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+                              <h3>Práctica 1 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
@@ -128,14 +129,51 @@
                <section class="colorlib-skills" data-section="pract1C">
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="practica1">
-                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1-EliasAgustin.pdf" class="image fit" >
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1Comp-EliasAgustin.pdf" class="image fit" >
                            <img src="images/pract1.png" width="75%" alt="Practica 1 Complementaria">
                         </a>
                      </div>
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Practica 1 COMPLEMENTARIA <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+                              <h3>Práctica 1 COMPLEMENTARIA <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="pract2">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="practica2">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica2-EliasAgustin.pdf" class="image fit" >
+                           <img src="images/pract1.png" width="75%" alt="Practica 2">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica 2 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+
+               <section class="colorlib-skills" data-section="pract3">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="practica3">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" class="image fit" >
+                           <img src="images/pract1.png" width="75%" alt="Practica 3">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica 3 <br>Click en la Imagen de arriba para abrir el PDF!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
@@ -172,16 +210,13 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="hire">
-                                 <p style="text-align: center"><strong>If you like my work and efforts, please consider buying me a coffee.<br>Thank you for your support!</strong></p>
+                                 <p style="text-align: center"><strong>Espero que haya sido de su agrado.<br>Que tenga un buen dia!</strong></p>
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>&nbsp;&nbsp;&nbsp;
-                                     <a class="bmc-button" onclick="window.open(`https://twitter.com/intent/tweet?text=Thank%20you%20@Vinay_Somawat%20for%20creating%20this%20portfolio%20web-page%2e%0A%0ACreate%20your%20own%20a%20portfolio%20%0A%0Ahttps%3A%2F%2Fvinaysomawat.github.io%2F`, 'share-twitter', 'width=550, height=235'); return false;"><img src="https://cdn3.iconfinder.com/data/icons/basicolor-reading-writing/24/077_twitter-512.png" alt="twitter"><span style="margin-left:5px">Tweet a thanks</span></a>
                                     <br><br>
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.quora.com/profile/Vinay-Somawat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://github.com/vinaysomawat" style="color: black;" class="fa fa-github"></a>
+                                    <p style="font-size: 30px; margin-bottom: 0px;">&nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.linkedin.com/in/agustin-elias-38a8b6116/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://github.com/eliasagustin/" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
                                  <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights, feel free to use this template.</strong></p>
