--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
                      <ul>
-                        <li><a href="#" data-nav-section="about1">Descripción</a></li>
+                        <li><a href="#" data-nav-section="about">Descripción</a></li>
                         <li><a href="#" data-nav-section="pract1">Practica 1</a></li>
-                        <li><a href="#" data-nav-section="pract1C">Practica 1</a></li>
+                        <li><a href="#" data-nav-section="pract1C">Practica 1 Comp</a></li>
                         <li><a href="#" data-nav-section="pract2">Practica 2</a></li>
                         <li><a href="#" data-nav-section="pract3">Practica 3</a></li>
                      </ul>
@@ -86,9 +86,9 @@
                <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
                      <div class="row">
+                        <img src="images/toplogo.png" width="100%" alt="UTN Logo" ata-animate-effect="fadeInLeft">
                         <div class="col-md-12">
-                           <img src="images/toplogo.png" width="100%" alt="UTN Logo" ata-animate-effect="fadeInLeft">
-                           <br>
+                           <br><br>
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12">
                                  
@@ -130,7 +130,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="practica1">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica1Comp-EliasAgustin.pdf" class="image fit" >
-                           <img src="images/pract1.png" width="75%" alt="Practica 1 Complementaria">
+                           <img src="images/pract1C.png" width="75%" alt="Practica 1 Complementaria">
                         </a>
                      </div>
                      <div class="row">
@@ -148,7 +148,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="practica2">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica2-EliasAgustin.pdf" class="image fit" >
-                           <img src="images/pract1.png" width="75%" alt="Practica 2">
+                           <img src="images/pract2.png" width="75%" alt="Practica 2">
                         </a>
                      </div>
                      <div class="row">
@@ -167,7 +167,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="practica3">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" class="image fit" >
-                           <img src="images/pract1.png" width="75%" alt="Practica 3">
+                           <img src="images/pract3.png" width="75%" alt="Practica 3">
                         </a>
                      </div>
                      <div class="row">
