--- a/index.html
+++ b/index.html
@@ -180,6 +180,78 @@
                      </div>
                   </div>
                </section>
+
+               <section class="colorlib-skills" data-section="bootstrapP1">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="bootstrapP1">
+                        <a href="https://eliasagustin.github.io/EGraficos/pract_bootstrap/bootstrap_practica1/" target="_blank" class="image fit" >
+                           <img src="images/bootstrapP1.png" width="75%" alt="Practica 3">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P1 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="bootstrapP2">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="bootstrapP2">
+                        <a href="https://eliasagustin.github.io/EGraficos/pract_bootstrap/bootstrap_practica2/" target="_blank" class="image fit" >
+                           <img src="images/bootstrapP2.png" width="75%" alt="Practica 3">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P1 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="bootstrapP3">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="bootstrapP3">
+                        <a href="https://eliasagustin.github.io/EGraficos/pract_bootstrap/bootstrap_practica3/" target="_blank" class="image fit" >
+                           <img src="images/bootstrapP3.png" width="75%" alt="Practica 3">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P2 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="bootstrapP3form">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="bootstrapP3form">
+                        <a href="https://eliasagustin.github.io/EGraficos/pract_bootstrap/bootstrap_practica3/indexForm.html" target="_blank" class="image fit" >
+                           <img src="images/bootstrapP3form.png" width="75%" alt="Practica 3 form">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P3 form <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
                 <!-------Github pie chart--------->
 <!--
                 <section class="colorlib-skills" data-section="skills">
