update menu with bootstrap exercice

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                         <li><a href="#" data-nav-section="pract1C">Practica 1 Comp</a></li>
                         <li><a href="#" data-nav-section="pract2">Practica 2</a></li>
                         <li><a href="#" data-nav-section="pract3">Practica 3</a></li>
+                        <li><a href="#" data-nav-section="bootstrapP1">Bootstrap P1</a></li>
+                        <li><a href="#" data-nav-section="bootstrapP2">Bootstrap P2</a></li>
+                        <li><a href="#" data-nav-section="bootstrapP3">Bootstrap P3</a></li>
+                        <li><a href="#" data-nav-section="bootstrapP3form">Bootstrap P3form</a></li>
                      </ul>
                   </div>
                </nav>
