--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
                         <li><a href="#" data-nav-section="bootstrapP2">Bootstrap P2</a></li>
                         <li><a href="#" data-nav-section="bootstrapP3">Bootstrap P3</a></li>
                         <li><a href="#" data-nav-section="bootstrapP3form">Bootstrap P3form</a></li>
+                        <li><a href="#" data-nav-section="php_P4">PHP Práctica N4</a></li>
+                        <li><a href="#" data-nav-section="php_P5">PHP Práctica N5</a></li>
                      </ul>
                   </div>
                </nav>
@@ -256,6 +258,43 @@
                      </div>
                   </div>
                </section>
+
+               <section class="colorlib-skills" data-section="php_P4">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="php_P4">
+                        <a href="https://eliasagustin.github.io/EGraficos/php/practica4/phpP4_EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/php_P4.png" width="75%" alt="PHP Práctica N4">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P3 form <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="php_P5">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="php_P5">
+                        <a href="https://eliasagustin.github.io/EGraficos/php/practica5/phpP5_EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/php_P5.png" width="75%" alt="PHP Práctica N5">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica Bootstrap P3 form <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
                 <!-------Github pie chart--------->
 <!--
                 <section class="colorlib-skills" data-section="skills">
