--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Práctica PHP numero 4 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+                              <h3>Práctica Bootstrap P3 form <br>Click en la Imagen de arriba para abrir la solución!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
@@ -269,7 +269,7 @@
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Práctica PHP numero 5 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+                              <h3>Práctica PHP n4 <br>Click en la Imagen de arriba para abrir la solución!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
@@ -287,7 +287,7 @@
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Práctica Bootstrap P3 form <br>Click en la Imagen de arriba para abrir la solución!</h3>
+                              <h3>Práctica PHP n5 <br>Click en la Imagen de arriba para abrir la solución!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
