--- a/index.html
+++ b/index.html
@@ -295,6 +295,60 @@
                   </div>
                </section>
 
+               <section class="colorlib-skills" data-section="php_P6">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="php_P6">
+                        <a href="https://eliasagustin.github.io/EGraficos/php/practica6/phpP6_EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/php_P6.png" width="75%" alt="PHP Práctica N6">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica PHP n6 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="php_P7">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="php_P6">
+                        <a href="https://eliasagustin.github.io/EGraficos/php/practica7/phpP7_EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/php_P7.png" width="75%" alt="PHP Práctica N7">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica PHP n7 <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="desarrolloWeb">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="php_P6">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/php_P7.png" width="75%" alt="Desarrollo Web">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica 3 Desarrollo Web <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
                 <!-------Github pie chart--------->
 <!--
                 <section class="colorlib-skills" data-section="skills">
