--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
                <section class="colorlib-skills" data-section="php_P7">
                   <div class="colorlib-narrow-content">
-                     <div class="row" align="middle" id="php_P6">
+                     <div class="row" align="middle" id="php_P7">
                         <a href="https://eliasagustin.github.io/EGraficos/php/practica7/phpP7_EliasAgustin.pdf" target="_blank" class="image fit" >
                            <img src="images/php_P7.png" width="75%" alt="PHP Práctica N7">
                         </a>
@@ -333,7 +333,7 @@
 
                <section class="colorlib-skills" data-section="desarrolloWeb">
                   <div class="colorlib-narrow-content">
-                     <div class="row" align="middle" id="php_P6">
+                     <div class="row" align="middle" id="practica1">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" target="_blank" class="image fit" >
                            <img src="images/php_P7.png" width="75%" alt="Desarrollo Web">
                         </a>
