arreglo imagen desarrollo web

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="practica1">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" target="_blank" class="image fit" >
-                           <img src="images/php_P7.png" width="75%" alt="Desarrollo Web">
+                           <img src="images/desarrolloweb.png" width="75%" alt="Desarrollo Web">
                         </a>
                      </div>
                      <div class="row">
