--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                         <li><a href="#" data-nav-section="bootstrapP3form">Bootstrap P3form</a></li>
                         <li><a href="#" data-nav-section="php_P4">PHP Práctica N4</a></li>
                         <li><a href="#" data-nav-section="php_P5">PHP Práctica N5</a></li>
+                        <li><a href="#" data-nav-section="php_P6">PHP Práctica N4</a></li>
+                        <li><a href="#" data-nav-section="php_P7">PHP Práctica N5</a></li>
+                        <li><a href="#" data-nav-section="desarrolloWeb">Pract Desarrollo Web</a></li>
+                        <li><a href="#" data-nav-section="php_P7">Practica Accesibilidad</a></li>
                      </ul>
                   </div>
                </nav>
@@ -316,7 +320,7 @@
                <section class="colorlib-skills" data-section="php_P7">
                   <div class="colorlib-narrow-content">
                      <div class="row" align="middle" id="php_P7">
-                        <a href="https://eliasagustin.github.io/EGraficos/php/practica7/phpP7_EliasAgustin.pdf" target="_blank" class="image fit" >
+                        <a href="https://github.com/eliasagustin/EGraficos/tree/main/php/practica7" target="_blank" class="image fit" >
                            <img src="images/php_P7.png" width="75%" alt="PHP Práctica N7">
                         </a>
                      </div>
@@ -333,9 +337,27 @@
 
                <section class="colorlib-skills" data-section="desarrolloWeb">
                   <div class="colorlib-narrow-content">
-                     <div class="row" align="middle" id="practica1">
+                     <div class="row" align="middle" id="practica3">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" target="_blank" class="image fit" >
                            <img src="images/desarrolloweb.png" width="75%" alt="Desarrollo Web">
+                        </a>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="hire">
+                              <h3>Práctica 3 Desarrollo Web <br>Click en la Imagen de arriba para abrir la solución!</h3>
+<!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+               <section class="colorlib-skills" data-section="accesibilidad">
+                  <div class="colorlib-narrow-content">
+                     <div class="row" align="middle" id="practica1">
+                        <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica4-EliasAgustin.pdf" target="_blank" class="image fit" >
+                           <img src="images/accesibilidad.png" width="75%" alt="Accesibilidad">
                         </a>
                      </div>
                      <div class="row">
