--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <li><a href="#" data-nav-section="bootstrapP3form">Bootstrap P3form</a></li>
                         <li><a href="#" data-nav-section="php_P4">PHP Práctica N4</a></li>
                         <li><a href="#" data-nav-section="php_P5">PHP Práctica N5</a></li>
-                        <li><a href="#" data-nav-section="php_P6">PHP Práctica N4</a></li>
-                        <li><a href="#" data-nav-section="php_P7">PHP Práctica N5</a></li>
+                        <li><a href="#" data-nav-section="php_P6">PHP Práctica N6</a></li>
+                        <li><a href="#" data-nav-section="php_P7">PHP Práctica N7</a></li>
                         <li><a href="#" data-nav-section="desarrolloWeb">Pract Desarrollo Web</a></li>
-                        <li><a href="#" data-nav-section="php_P7">Practica Accesibilidad</a></li>
+                        <li><a href="#" data-nav-section="accesibilidad">Practica Accesibilidad</a></li>
                      </ul>
                   </div>
                </nav>
@@ -337,7 +337,7 @@
 
                <section class="colorlib-skills" data-section="desarrolloWeb">
                   <div class="colorlib-narrow-content">
-                     <div class="row" align="middle" id="practica3">
+                     <div class="row" align="middle" id="desarrolloWeb">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica3-EliasAgustin.pdf" target="_blank" class="image fit" >
                            <img src="images/desarrolloweb.png" width="75%" alt="Desarrollo Web">
                         </a>
@@ -355,7 +355,7 @@
 
                <section class="colorlib-skills" data-section="accesibilidad">
                   <div class="colorlib-narrow-content">
-                     <div class="row" align="middle" id="practica1">
+                     <div class="row" align="middle" id="accesibilidad">
                         <a href="https://eliasagustin.github.io/EGraficos/practicas/Practica4-EliasAgustin.pdf" target="_blank" class="image fit" >
                            <img src="images/accesibilidad.png" width="75%" alt="Accesibilidad">
                         </a>
@@ -363,7 +363,7 @@
                      <div class="row">
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                            <div class="hire">
-                              <h3>Práctica 3 Desarrollo Web <br>Click en la Imagen de arriba para abrir la solución!</h3>
+                              <h3>Práctica 4 - Accesibilidad <br>Click en la Imagen de arriba para abrir la solución!</h3>
 <!--                                    <a href="#" class="btn-hire" style="text-align: center;">Download Resume</a>-->
                            </div>
                         </div>
