--- a/viewer360/prot1.html
+++ b/viewer360/prot1.html
@@ -1,2 +1,2 @@
-<div class="cloudimage-360" data-folder="./images-360/prot1-72/" data-filename="P1_{index}.jpg" data-amount="72"></div>
+<div class="cloudimage-360" data-folder="./images-360/prot1-72d/" data-filename="P1_{index}.jpg" data-amount="72"></div>
 <script src="https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/2.7.1/js-cloudimage-360-view.min.js"></script>
