--- a/viewer360/demoTerminal.html
+++ b/viewer360/demoTerminal.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Api Arribos Terminal Rosario</title>
     <style>
     .contenedor {
     display: flex;
