--- a/viewer360/demoTerminal.html
+++ b/viewer360/demoTerminal.html
@@ -29,7 +29,7 @@ img {
 </div>
   <script>
     function reload() {
-        document.getElementById('myIfr').src = 'http://localhost:3001';
+        document.getElementById('myIfr').src = 'https://informacion-tabla-terminal-rosario.onrender.com';
     }
     document.getElementById("btn").onclick = reload();
 </script>
