--- a/viewer360/demoTerminal.html
+++ b/viewer360/demoTerminal.html
@@ -31,7 +31,7 @@ img {
     function reload() {
         document.getElementById('myIfr').src = 'https://informacion-tabla-terminal-rosario.onrender.com';
     }
-    document.getElementById("btn").onclick = reload();
+    reload();
 </script>
 
 </body>
