--- a/viewer360/demoTerminal.html
+++ b/viewer360/demoTerminal.html
@@ -32,6 +32,10 @@ img {
         document.getElementById('myIfr').src = 'https://informacion-tabla-terminal-rosario.onrender.com';
     }
     reload();
+      
+    setTimeout(function(){
+        location.reload();
+    }, 20*60000);   
 </script>
 
 </body>
