--- a/demoTerminal.html
+++ b/demoTerminal.html
@@ -23,13 +23,18 @@ img {
 
     <iframe id="myIfr" src="https://informacion-tabla-terminal-rosario.onrender.com" frameborder="0"></iframe>
     <!-- <iframe class="iframe" id="myIfr" src="http://localhost:3001/" frameborder="0"></iframe> -->
-    <img src="https://cdn3.f-cdn.com/contestentries/1336049/16325132/5b0da44845058_thumb900.jpg" alt="Mi Imagen">
+    <img src="https://raw.githubusercontent.com/eliasagustin/EGraficos/main/viewer360/imgLateral/publicidad_02.jpg" alt="demo01">
 </div>
   <script>
+  
     function reload() {
-        document.getElementById('myIfr').src = 'http://localhost:3001';
+        document.getElementById('myIfr').src = 'https://informacion-tabla-terminal-rosario.onrender.com';
     }
-    document.getElementById("btn").onclick = reload();
+    reload();
+      
+    setTimeout(function(){
+        location.reload();
+    }, 20*60000);   
 </script>
 
 </body>
