--- a/viewer360/demoTerminal.html
+++ b/viewer360/demoTerminal.html
@@ -25,7 +25,7 @@ img {
     <iframe id="myIfr" src="https://informacion-tabla-terminal-rosario.onrender.com" frameborder="0"></iframe>
     <!-- <iframe class="iframe" id="myIfr" src="http://localhost:3001/" frameborder="0"></iframe> -->
 
-    <img src="https://cdn3.f-cdn.com/contestentries/1336049/16325132/5b0da44845058_thumb900.jpg" alt="Mi Imagen">
+    <img src="imgLateral/publicidad_01.jpg" alt="Mi Imagen">
 </div>
   <script>
     function reload() {
