--- a/demoTerminal.html
+++ b/demoTerminal.html
@@ -23,7 +23,7 @@ img {
 
     <iframe id="myIfr" src="https://informacion-tabla-terminal-rosario.onrender.com" frameborder="0"></iframe>
     <!-- <iframe class="iframe" id="myIfr" src="http://localhost:3001/" frameborder="0"></iframe> -->
-    <img src="https://raw.githubusercontent.com/eliasagustin/EGraficos/main/viewer360/imgLateral/publicidad_02.jpg" alt="demo01">
+    <img src="viewer360/imgLateral/publicidad_02.jpg" alt="demo01">
 </div>
   <script>
   
